really fixed dark mode button position on small view

--- a/styles/base.css
+++ b/styles/base.css
@@ -39,7 +39,6 @@ span {
 #darkBtn {
     width: 35px;
     position: absolute;
-    top: 130px;
     right: 10px;
     cursor: pointer;
 }
